--- a/index.css
+++ b/index.css
@@ -1,13 +1,58 @@
+
+:root {
+  --page-header-bgColor: #242e42;
+  --page-header-bgColor-hover: #1d2636;
+  --page-header-txtColor: #dde9f8;
+  --page-header-headingColor: #7889a4;
+  --page-header-width: 220px;
+  --page-content-bgColor: #f0f1f6;
+  --page-content-txtColor: #171616;
+  --page-content-blockColor: #fff;
+  --white: #fff;
+  --black: #333;
+  --blue: #00b9eb;
+  --red: #ec1848;
+  --border-radius: 4px;
+  --box-shadow: 0 0 10px -2px rgba(0, 0, 0, 0.075);
+}
+ 
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+ 
+ul {
+  list-style: none;
+}
+ 
+a,
+button {
+  color: inherit;
+}
+ 
+a {
+  text-decoration: none;
+}
+ 
+button {
+  background: none;
+  cursor: pointer;
+}
+ 
+input {
+  -webkit-appearance: none;
+}
+ 
+button,
+input {
+  border: none;
+}
+ 
+svg {
+  display: block;
+}
+ 
 body {
-  background-color: lightblue;
-
-}
-h1 {
-  color: white;
-  text-align: center;
-
-}
-p {
-  font-family: verdana;
-  font-size: 20px;
+  font: 16px/1.5 "Lato", sans-serif;
 }
