--- a/custom.css
+++ b/custom.css
@@ -1,1 +1,24 @@
-
+/*CUSTOM VARIABLES HERE*/
+ 
+.page-header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  overflow: auto;
+  padding-top: 20px;
+  width: var(--page-header-width);
+  color: var(--page-header-txtColor);
+  background: var(--page-header-bgColor);
+}
+ 
+.page-header nav {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+}
+ 
+.page-header .toggle-mob-menu {
+  display: none;
+}
