--- a/body.css
+++ b/body.css
@@ -1,1 +1,18 @@
-
+body {
+  position: relative;
+}
+ 
+.page-header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+   
+  /*Comment these styles*/
+  /*position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  overflow: auto;*/
+}
